defense: more working on talk

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -53,6 +53,7 @@
     Pages = {255--271},
     Volume = {3},
     Year = {2009},
+    Keywords = {defensethesis},
 }
 
 @article{Walter2009a-long,
@@ -64,6 +65,7 @@
     Year = {2009},
     note = {Reprinted as book chapter in Pauline Coolen-Schrijner, Frank P.A. Coolen, Matthias C.M. Troffaes, Thomas Augustin, and Sat Gupta, editors, \emph{{Imprecision in Statistical Theory and Practice}}, Grace Scientific Publishing, 2009 },
     issn = {1559-8616},
+    keywords = {defensethesis},
 }
 
 @BOOK{2009:CoolenSchrijner,
@@ -81,8 +83,8 @@
   number = 69,
   institution = {Department of Statistics, LMU Munich},
   url = {http://epub.ub.uni-muenchen.de/11050/1/tr069.pdf},
-  note = {Substantially extended version of \cite{Walter2010a}. \url{http://epub.ub.uni-muenchen.de/11050/1/tr069.pdf}},
-    keywords = {disssource},
+  note = {Substantially extended version of \textcite{Walter2010a}.},
+  keywords = {disssource,defensethesis},
 }
 
 @INCOLLECTION{Walter2010a,
@@ -96,6 +98,7 @@
   publisher = {Springer},
   isbn = {978-3-7908-2412-4},
   url = {http://www.springerlink.com/content/ut13855471268053/},
+  keywords = {defensethesis},
 }
 
 @INPROCEEDINGS{Walter2011a,
@@ -109,7 +112,7 @@
   pages =     {391--400},
   publisher = {SIPTA},
   url = {http://www.sipta.org/isipta11/proceedings/046.html},
-    keywords = {disssource},
+  keywords = {disssource,defensethesis},
 }
 
 @INPROCEEDINGS{Troffaes2012a,
@@ -132,7 +135,7 @@
   number = 131,
   institution = {Department of Statistics, LMU Munich},
   url = {http://epub.ub.uni-muenchen.de/14068/},
-    keywords = {disssource},
+  keywords = {disssource,defensethesis},
 }
 
 @misc{Troffaes2013a,
@@ -154,7 +157,8 @@
     Title = {A Robust {B}ayesian Approach to Modelling Epistemic Uncertainty in Common-Cause Failure Models},
     Year = {2013},
     journal = {Reliability Engineering \& System Safety},
-    doi = {**** RESS-D-13-00006R1}
+    doi = {10.1016/j.ress.2013.05.022},
+    keywords = {defensethesis},
 }
 
 @incollection{itip-statinf,
@@ -167,7 +171,7 @@
     note      = "In preparation",
     longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
     editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
-    keywords = {disssource},
+    keywords = {disssource,defensethesis},
 }
 
 @collection{itip,
@@ -184,5 +188,6 @@
   author={Gero Walter and Norbert Krautenbacher},
   year={2013},
   url={http://luck.r-forge.r-project.org/},
+  keywords = {defensethesis},
 }
 
