--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -64,7 +64,9 @@
     Pages = {287--296},
     Publisher = {SIPTA},
     Title = {Imprecise probability models for inference in exponential families},
-    Year = {2005}}
+    Year = {2005},
+    Keywords = {defensefurther},
+}
 
 @inproceedings{2005:quaeghebeurcooman-short,
     Address = {Manno},
@@ -74,7 +76,9 @@
     Pages = {287--296},
     Publisher = {SIPTA},
     Title = {Imprecise probability models for inference in exponential families},
-    Year = {2005}}
+    Year = {2005},
+    Keywords = {defensefurther},
+}
 
 @book{1991:walley,
   author = {Peter Walley},
@@ -83,6 +87,7 @@
   address = {London},
   ISBN={0-412-28660-2},
   year = {1991},
+  keywords = {defensefurther},
 }
 
 @article{1996:walley::idm,
@@ -92,7 +97,8 @@
   year = {1996},
   volume = {58},
   number = {1},
-  pages = {3--34}
+  pages = {3--34},
+  keywords = {defensefurther},
 }
 
 @article{2006:evans,
@@ -102,6 +108,7 @@
     Title = {Checking for Prior-Data Conflict},
     Volume = {1},
     Year = {2006},
+    Keywords = {defensefurther},
 }
 
 @ARTICLE{2009:hampel,
