--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -47,6 +47,7 @@
    year={1994},
    ISBN={0-471-59397-4},
    series={A Wiley interscience publication},
+   keywords = {defensefurther},
 }
 
 @book{2005:walker,
@@ -126,7 +127,8 @@ author = "W. Werner and M. Hirano and S. Kondo and G. Johanson and J. Lanore and
   issn = {0951-8320},
   doi = {10.1016/j.ress.2010.11.008},
   opturl = {http://www.sciencedirect.com/science/article/B6V4T-51JF82G-3/2/a13cf4d9dd6b924d7df670482d4f8dbd},
-  author = {Dana Kelly and Corwin Atwood}
+  author = {Dana Kelly and Corwin Atwood},
+  keywords = {defensefurther},
 }
 
 @article{1996:atwood,
@@ -141,7 +143,8 @@ author = "W. Werner and M. Hirano and S. Kondo and G. Johanson and J. Lanore and
   pages = {37--46},
   optmonth = {},
   optnote = {},
-  optannote = {}
+  optannote = {},
+  keywords = {defensefurther},
 }
 
 @book{1965:good,
@@ -151,6 +154,7 @@ author = "W. Werner and M. Hirano and S. Kondo and G. Johanson and J. Lanore and
   publisher = {MIT Press},
   year = {1965},
   address = {Cambridge (MA)},
+  keywords = {defensefurther},
 }
 
 @proceedings{csni86-115,
