defense: tweaking the festschrift citation

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -101,6 +101,19 @@
   keywords = {defensethesis},
 }
 
+@INCOLLECTION{Walter2010a-long,
+  author = {Gero Walter and Thomas Augustin},
+  editor = {Thomas Kneib and Gerhard Tutz},
+  year = 2010,
+  title = {{B}ayesian linear regression --- different conjugate models and their (in)sensitivity to prior-data conflict},
+  booktitle = {Statistical Modelling and Regression Structures},
+  series = {Festschrift in Honour of Ludwig Fahrmeir},
+  pages = {59--78},
+  publisher = {Springer},
+  addendum = {Extended version published as Tech.\ Rep.\ 69, Department of Statistics, LMU Munich. {\sf\tiny URL}: \url{http://epub.ub.uni-muenchen.de/11050/1/tr069.pdf}},
+  keywords = {defensethesis},
+}
+
 @INPROCEEDINGS{Walter2011a,
   author = {Gero Walter and Thomas Augustin and Frank P.A. Coolen},
   longeditor = {Frank P. A. Coolen and Gert de Cooman and Thomas Fetz and Michael Oberguggenberger},
