--- a/talk/defense.tex
+++ b/talk/defense.tex
@@ -926,7 +926,7 @@ but are useful only for inferences that are \emph{linear} in the posteriors\\
 
 \frame{\frametitle{Works Incorporated into the Thesis}
 
-\nocite{Walter2009a-short,Walter2010a,Walter2011a,Walter2012b,Troffaes2013a-short,itip-statinf,luck-package}
+\nocite{Walter2009a-short,Walter2010a-long,Walter2011a,Walter2012b,Troffaes2013a-short,itip-statinf,luck-package}
 
 \printbibliography[heading=none,keyword=defensethesis]
 
