--- a/talk/defense.tex
+++ b/talk/defense.tex
@@ -882,7 +882,7 @@ All inferences are based on the set of posteriors
 \uncover<3->{\centerline{Let hyperparameters $(\nzg, \yzr)$ vary in a set $\PZc$ \then\ \alert{set of priors}}}
 }
 
-\begin{frame}[label=commute-back]{Take Convex Hull for the Set of Priors}
+\begin{frame}[label=commute-back]{Taking the Convex Hull as the Set of Priors}
 
 \uncover<1->{%
 \begin{block}{Convex Set of Priors}
@@ -924,7 +924,7 @@ but are useful only for inferences that are \emph{linear} in the posteriors\\
 
 
 
-\frame{\frametitle{Works Incorporated into the Thesis}
+\frame{\frametitle{Works the Thesis is Based on}
 
 \nocite{Walter2009a-short,Walter2010a-long,Walter2011a,Walter2012b,Troffaes2013a-short,itip-statinf,luck-package}
 
